# typed

./: .env  .gitignore  Cargo.toml  README.md
ast/: Cargo.toml
ast/src/: builder.rs  lib.rs
aster/: Cargo.toml
aster/src/: lib.rs
examples/: expr.tpd  fib.tpd  fn.tpd  instantiate.tpd  value.tpd  variable.tpd
parser/: Cargo.toml
parser/src/: ast.rs  binding.rs  context.rs  definition.rs  error.rs  expr.rs  expression.rs  lib.rs  literal.rs  module.rs  node.rs  parser.rs  span.rs  ty.rs  vis.rs
parser/src/ast/: binding.rs  expression.rs  module.rs  node.rs  recover.rs  span.rs  spanned.rs  tuple.rs  ty.rs  vis.rs
repl/: Cargo.toml
repl/src/: main.rs
typed/: Cargo.toml
typed/src/: ast.rs  main.rs  parser.rs  reduced.rs  tree_printer.rs
typed/src/ast/: binding.rs  expression.rs  fn_appl.rs  fn_decl.rs  ident.rs  literal.rs  transform.rs
typed/src/parser/: binding.rs  expression.rs  fn_appl.rs  fn_decl.rs  ident.rs  literal.rs  root.rs
typed/src/reduced/: expression.rs  fn_appl.rs  fn_decl.rs
