[package]
name = "typed_repl"
version = "0.1.0"
authors = ["Bartłomiej Kuras <bartlomiej.kuras@o2.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { package = "typed_ast", path = "../ast" }
parser = { package = "typed_parser", path = "../parser" }
rustyline = "5"
