[package]
name = "typed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"
tracing = {version = "0.1.37", features = ["attributes"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
