[package]
name = "typed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
color-eyre = "0.6"
dotenv = "0.15.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"
tracing = {version = "0.1.37", features = ["attributes"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
tracing-error = "0.2.0"
clap = { version = "4.5.2", features = ["derive", "env", "wrap_help"] }
typed-parser = { version = "0.1.0", path = "../parser" }
ariadne = { version = "0.4.0", features = ["auto-color"] }
itertools = "0.13.0"
